# fhgr-checkers-detector

./: Cargo.toml  README.md
.cargo/: config.toml
board-generator/: Cargo.toml
board-generator/src/: main.rs
checkers-detector/: Cargo.toml  build.rs
checkers-detector/src/: board_extractor.rs  calibrator.rs  camera_control.rs  detector.rs  main.rs  util.rs  viewer.rs
docs/: algorithm-tests.ipynb
resources/: full-board.json
