[workspace]
resolver = "2"
members = [
    "board-generator",
    "checkers-detector",
]

[workspace.dependencies]
opencv = "0.94"
vcpkg = "0.2"
clap = { version = "4", features = ["derive"] }
url = "2"
reqwest = {  version = "0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.11"
array2d = "0.3"
