[package]
name = "checkers-detector"
version = "0.1.0"
edition = "2024"

[features]
default = ["resolve_opencv_with_vcpkg"]
resolve_opencv_with_vcpkg = ["dep:vcpkg"]

show_debug_screens = []

[dependencies]
opencv.workspace = true
clap.workspace = true
url.workspace = true
reqwest.workspace = true
log.workspace = true
env_logger.workspace = true
array2d.workspace = true
lazy_static.workspace = true

[build-dependencies]
vcpkg = { workspace = true, optional = true }
